--- a/EgitimPlatformuAI/Views/ListeningScreen/ListeningScreen.storyboard
+++ b/EgitimPlatformuAI/Views/ListeningScreen/ListeningScreen.storyboard
@@ -37,23 +37,23 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What do you hear?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPQ-dE-yfc">
-                                <rect key="frame" x="20" y="119" width="353" height="50"/>
+                                <rect key="frame" x="20" y="279" width="353" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="ru3-eq-Q0d"/>
+                                    <constraint firstAttribute="height" constant="70" id="ru3-eq-Q0d"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WwE-e0-b4n">
-                                <rect key="frame" x="10" y="179" width="373" height="160"/>
+                                <rect key="frame" x="10" y="119" width="373" height="150"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VHP-xP-9vu" customClass="LottieAnimationView" customModule="Lottie">
-                                <rect key="frame" x="136.66666666666666" y="189" width="119.99999999999997" height="120"/>
+                                <rect key="frame" x="136.66666666666666" y="119" width="119.99999999999997" height="120"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" name="mintGreen"/>
                                 <constraints>
@@ -126,7 +126,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to sound image" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dbA-0d-iSp">
-                                <rect key="frame" x="20" y="309" width="353" height="30"/>
+                                <rect key="frame" x="20" y="239" width="353" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="AkX-3M-SBG"/>
                                 </constraints>
@@ -166,17 +166,18 @@
                         <color key="backgroundColor" name="backDarkBlue"/>
                         <constraints>
                             <constraint firstItem="dbA-0d-iSp" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="1T8-lH-Lbb"/>
+                            <constraint firstItem="sPQ-dE-yfc" firstAttribute="top" secondItem="WwE-e0-b4n" secondAttribute="bottom" constant="10" id="5N4-Bw-OWn"/>
                             <constraint firstItem="7kG-mN-sf6" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="7eq-W2-Ohi"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="fwL-us-7d6" secondAttribute="trailing" constant="30" id="9qm-Ea-lLv"/>
-                            <constraint firstItem="VHP-xP-9vu" firstAttribute="top" secondItem="sPQ-dE-yfc" secondAttribute="bottom" constant="20" id="ABK-Ur-8jI"/>
-                            <constraint firstItem="caZ-Ja-sSi" firstAttribute="top" secondItem="WwE-e0-b4n" secondAttribute="bottom" constant="10" id="AWD-s1-Gve"/>
+                            <constraint firstItem="VHP-xP-9vu" firstAttribute="top" secondItem="7kG-mN-sf6" secondAttribute="bottom" constant="20" id="ABK-Ur-8jI"/>
+                            <constraint firstItem="caZ-Ja-sSi" firstAttribute="top" secondItem="sPQ-dE-yfc" secondAttribute="bottom" id="AWD-s1-Gve"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="fwL-us-7d6" secondAttribute="bottom" id="DV8-wz-kdc"/>
-                            <constraint firstItem="caZ-Ja-sSi" firstAttribute="top" secondItem="dbA-0d-iSp" secondAttribute="bottom" constant="10" id="DeJ-33-ryS"/>
-                            <constraint firstItem="sPQ-dE-yfc" firstAttribute="top" secondItem="Jh1-HN-l2N" secondAttribute="bottom" constant="20" id="FEd-0T-wjt"/>
+                            <constraint firstItem="sPQ-dE-yfc" firstAttribute="top" secondItem="dbA-0d-iSp" secondAttribute="bottom" constant="10" id="FEd-0T-wjt"/>
                             <constraint firstItem="5DS-Jm-f3J" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FTV-Na-But"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="y2M-VA-kDS" secondAttribute="trailing" constant="30" id="IFo-D0-WRj"/>
                             <constraint firstAttribute="bottom" secondItem="5DS-Jm-f3J" secondAttribute="bottom" id="M3R-ao-eUh"/>
                             <constraint firstItem="y2M-VA-kDS" firstAttribute="top" secondItem="caZ-Ja-sSi" secondAttribute="bottom" constant="10" id="NPD-ps-6Ua"/>
+                            <constraint firstItem="WwE-e0-b4n" firstAttribute="top" secondItem="7kG-mN-sf6" secondAttribute="bottom" constant="20" id="Od9-X3-MGI"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="sPQ-dE-yfc" secondAttribute="trailing" constant="20" id="Og8-Ao-lqw"/>
                             <constraint firstItem="VHP-xP-9vu" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="OjY-89-x79"/>
                             <constraint firstItem="ceb-tt-iXm" firstAttribute="leading" secondItem="7kG-mN-sf6" secondAttribute="trailing" constant="5" id="Pe1-sU-QAt"/>
@@ -187,7 +188,6 @@
                             <constraint firstItem="dbA-0d-iSp" firstAttribute="top" secondItem="VHP-xP-9vu" secondAttribute="bottom" id="c4R-iz-XUE"/>
                             <constraint firstItem="7kG-mN-sf6" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="eTy-Po-k43"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="caZ-Ja-sSi" secondAttribute="trailing" constant="20" id="f6K-a7-poL"/>
-                            <constraint firstItem="WwE-e0-b4n" firstAttribute="top" secondItem="sPQ-dE-yfc" secondAttribute="bottom" constant="10" id="fSX-mb-eqe"/>
                             <constraint firstItem="WwE-e0-b4n" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="iU1-RI-FXs"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="5DS-Jm-f3J" secondAttribute="trailing" id="jBh-pE-s2L"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="WwE-e0-b4n" secondAttribute="trailing" constant="10" id="kEj-SC-3br"/>
@@ -208,6 +208,7 @@
                         <outlet property="customContinueView" destination="5DS-Jm-f3J" id="giV-hM-zEq"/>
                         <outlet property="listensLeftLabel" destination="ceb-tt-iXm" id="0Cv-cg-EhC"/>
                         <outlet property="lottieView" destination="VHP-xP-9vu" id="FN9-Ai-qU5"/>
+                        <outlet property="questionLabel" destination="sPQ-dE-yfc" id="7Wa-1G-m92"/>
                         <outlet property="questionNumber" destination="7kG-mN-sf6" id="P4E-G6-Vru"/>
                         <outlet property="tapToSoundImageLabel" destination="dbA-0d-iSp" id="A7s-YE-TOP"/>
                     </connections>
