--- a/EgitimPlatformuAI/Views/MainScreen/Base.lproj/MainScreen.storyboard
+++ b/EgitimPlatformuAI/Views/MainScreen/Base.lproj/MainScreen.storyboard
@@ -42,7 +42,7 @@
                                 <rect key="frame" x="0.0" y="150" width="402" height="690"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DfZ-hg-2xi">
-                                        <rect key="frame" x="0.0" y="0.0" width="402" height="550"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="402" height="710"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Continue Course" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiV-Uu-rhd">
                                                 <rect key="frame" x="10" y="10" width="382" height="30"/>
@@ -119,22 +119,75 @@
                                                     </collectionViewCell>
                                                 </cells>
                                             </collectionView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exercises" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEZ-Pn-ASU">
+                                                <rect key="frame" x="10" y="560" width="382" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="4Wb-Md-lXh"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                                <color key="textColor" name="summer"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Dtl-Fu-lo3">
+                                                <rect key="frame" x="10" y="600" width="382" height="100"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ICR-YJ-owJ">
+                                                        <rect key="frame" x="0.0" y="0.0" width="186" height="100"/>
+                                                        <color key="backgroundColor" name="summer"/>
+                                                        <color key="tintColor" name="backDarkBlue"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="book" catalog="system" title=" Reading Book"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                <integer key="value" value="12"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                        <connections>
+                                                            <action selector="handleReadingBookButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="C6t-0O-YQD"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLE-PK-0CS">
+                                                        <rect key="frame" x="196" y="0.0" width="186" height="100"/>
+                                                        <color key="backgroundColor" name="royalBlue"/>
+                                                        <color key="tintColor" name="paleGray"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="puzzlepiece.extension" catalog="system" title="Word Puzzle"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                <integer key="value" value="12"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                        <connections>
+                                                            <action selector="handleWordPuzzleButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X9a-pX-BGC"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="QnD-8m-5r7"/>
+                                                </constraints>
+                                            </stackView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="QiV-Uu-rhd" secondAttribute="trailing" constant="10" id="1Hu-KN-fon"/>
+                                            <constraint firstAttribute="trailing" secondItem="XEZ-Pn-ASU" secondAttribute="trailing" constant="10" id="4s7-wU-8an"/>
                                             <constraint firstAttribute="trailing" secondItem="maW-RO-0Cj" secondAttribute="trailing" id="7la-Tq-23o"/>
                                             <constraint firstAttribute="trailing" secondItem="AuW-VA-f6H" secondAttribute="trailing" id="BEP-ai-sJ4"/>
+                                            <constraint firstItem="Dtl-Fu-lo3" firstAttribute="leading" secondItem="DfZ-hg-2xi" secondAttribute="leading" constant="10" id="BcE-0b-eZn"/>
                                             <constraint firstItem="L4E-nM-gSH" firstAttribute="top" secondItem="maW-RO-0Cj" secondAttribute="bottom" constant="30" id="Jru-1q-Fuc"/>
+                                            <constraint firstItem="Dtl-Fu-lo3" firstAttribute="top" secondItem="XEZ-Pn-ASU" secondAttribute="bottom" constant="10" id="O06-8h-9uh"/>
+                                            <constraint firstItem="XEZ-Pn-ASU" firstAttribute="top" secondItem="AuW-VA-f6H" secondAttribute="bottom" constant="10" id="PYU-RV-jRg"/>
                                             <constraint firstItem="QiV-Uu-rhd" firstAttribute="leading" secondItem="DfZ-hg-2xi" secondAttribute="leading" constant="10" id="Sw6-dK-HTj"/>
                                             <constraint firstItem="AuW-VA-f6H" firstAttribute="leading" secondItem="DfZ-hg-2xi" secondAttribute="leading" id="W3J-sE-dzJ"/>
                                             <constraint firstItem="L4E-nM-gSH" firstAttribute="leading" secondItem="DfZ-hg-2xi" secondAttribute="leading" constant="10" id="dcp-2l-GRS"/>
-                                            <constraint firstAttribute="bottom" secondItem="AuW-VA-f6H" secondAttribute="bottom" id="dmo-2V-mov"/>
                                             <constraint firstAttribute="trailing" secondItem="L4E-nM-gSH" secondAttribute="trailing" constant="10" id="hbh-lN-gEW"/>
                                             <constraint firstItem="maW-RO-0Cj" firstAttribute="leading" secondItem="DfZ-hg-2xi" secondAttribute="leading" id="kuA-H9-88Z"/>
                                             <constraint firstItem="maW-RO-0Cj" firstAttribute="top" secondItem="QiV-Uu-rhd" secondAttribute="bottom" id="q7d-eV-uan"/>
+                                            <constraint firstAttribute="bottom" secondItem="Dtl-Fu-lo3" secondAttribute="bottom" constant="10" id="sdg-4r-ngt"/>
+                                            <constraint firstItem="XEZ-Pn-ASU" firstAttribute="leading" secondItem="DfZ-hg-2xi" secondAttribute="leading" constant="10" id="vbZ-gm-Ad2"/>
                                             <constraint firstItem="QiV-Uu-rhd" firstAttribute="top" secondItem="DfZ-hg-2xi" secondAttribute="top" constant="10" id="xX9-SY-Ulf"/>
                                             <constraint firstItem="AuW-VA-f6H" firstAttribute="top" secondItem="L4E-nM-gSH" secondAttribute="bottom" id="xcp-5K-HBh"/>
+                                            <constraint firstAttribute="trailing" secondItem="Dtl-Fu-lo3" secondAttribute="trailing" constant="10" id="xzg-2I-jvH"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -177,11 +230,19 @@
         </scene>
     </scenes>
     <resources>
+        <image name="book" catalog="system" width="128" height="99"/>
+        <image name="puzzlepiece.extension" catalog="system" width="128" height="99"/>
         <namedColor name="backDarkBlue">
             <color red="0.10588235294117647" green="0.12549019607843137" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="charcoal">
             <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="paleGray">
+            <color red="0.88235294117647056" green="0.89411764705882357" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="royalBlue">
+            <color red="0.29019607843137257" green="0.3843137254901961" blue="0.77254901960784317" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="summer">
             <color red="0.94117647058823528" green="0.73333333333333328" blue="0.47058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
